ros/servo controller/ros2_ws/log/build_2024-06-05_10-48-08/arm_controller_package/stderr.log
  File "/home/ubuntu/ros2_ws/install/arm_controller_package/lib/python3.10/site-packages/arm_controller_package/PiClient.py", line 65
    break:
         ^
SyntaxError: invalid syntax

